--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,9 +38,9 @@ jobs:
         working-directory: server
         run: npm install
 
-      - name: 🛠 Build server app
-        working-directory: server
-        run: npm run build
+      # - name: 🛠 Build server app
+      #   working-directory: server
+      #   run: npm run build
 
       - name: 📂 Upload server `dist/` via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
@@ -49,7 +49,7 @@ jobs:
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
           server-dir: /crms.minventory.com.ng/backend
-          local-dir: server/dist/
+          local-dir: server/
 
       - name: 🧼 Prepare tmp directory with fresh restart.txt
         working-directory: server
