--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           server: ftp.minventory.com.ng
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
-          server-dir: /crms.minventory.com.ng/backend
+          server-dir: /crms.minventory.com.ng/backend/
           local-dir: server/
 
       - name: 🧼 Prepare tmp directory with fresh restart.txt
