--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           server: ftp.minventory.com.ng
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
-          server-dir: /crms.minventory.com.ng/
+          server-dir: /
           local-dir: client/dist/
 
       # server
@@ -48,7 +48,7 @@ jobs:
           server: ftp.minventory.com.ng
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
-          server-dir: /crms.minventory.com.ng/backend/
+          server-dir: backend/
           local-dir: server/
 
       - name: 🧼 Prepare tmp directory with fresh restart.txt
@@ -64,5 +64,5 @@ jobs:
           server: ftp.minventory.com.ng
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
-          server-dir: /crms.minventory.com.ng/backend/tmp/
+          server-dir: backend/tmp/
           local-dir: server/tmp/
