--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
           server: ftp.minventory.com.ng
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
+          dangerous-clean-slate: true
           server-dir: ./
           local-dir: client/dist/
 
@@ -48,7 +49,7 @@ jobs:
           server: ftp.minventory.com.ng
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
-          server-dir: backend/
+          server-dir: ./backend/
           local-dir: server/
 
       - name: 🧼 Prepare tmp directory with fresh restart.txt
@@ -64,5 +65,5 @@ jobs:
           server: ftp.minventory.com.ng
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
-          server-dir: backend/tmp/
+          server-dir: ./backend/tmp/
           local-dir: server/tmp/
