--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.16.0",
     "nodemailer": "^7.0.12",
+    "pdf-lib": "^1.17.1",
     "puppeteer": "^24.35.0",
     "qrcode": "^1.5.4"
   },
